this will fix an issue with the paragraph text in the header overlapping the rest of the page on small devices

--- a/styles.css
+++ b/styles.css
@@ -175,7 +175,7 @@ button:hover {
 @media (max-width: 1024px) {
   header {
     margin-top: -5.8rem;
-    height: 37.5rem;
+    min-height: 37.5rem;
   }
 
   h1 {
